	is changed to show the 'metric' and the name of the 'method' is
	fully expanded. No more fails if 'upto' is too large.

	* rankindex: can now use Mahalanobis or Manhattan
	distances. Scales automatically gradient variables to unit
	variance (Euclidean) or range (Manhattan), and the scaling is
	already inbuilt in Mahalanobis and Gower.

Version 2.1-29 (closed April 19, 2013)

	* ordisurf: significant changes were made to this function:

	 - The default for `method` and `select` were changed to `"REML"`
	and `TRUE` respectivelt.

	 - Argument `thinplate` is deprecated in favour of `isotropic`. A
	warning is now issued if `thinplate` is used.

	 - The spline basis for the smoother can now be specified from a
	subset of those implemented in the mgcv package. This is achieved
	via the `bs` argument, which defaults to `"tp"` for thin plate
	regression splines.

	 - Argument `knots` and `bs` can now be a vector of length two, one
	per ordination dimension considered. This is only of use with
	anisotropic surfaces with `isotropic = FALSE`.

	 - New argument `fx`; indicates whether the smoothers are fixed
	degrees of freedom regression splines (`fx = FALSE`) or a
	penalised regression spline (`fx = TRUE`). Can be a vector of
	length 2 for anisotropic surfaces (`isotropic = FALSE`).

	 - The number of locations in each ordination dimension at which the
	fitted surface is evaluated can now be specified via new argument
	`npoints`.

	 - The formula passed to `gam` is now built in greater detail. When
	the model is printed the user can see exactly how the smoother was
	constructed.
 
	* oecosimu: the interpretation argument "alternative" was really
	twisted. We now changed the test direction and have a much clearer
	explanatory text in printed output. The issue was raised by Juan
	Manual Barreneche (jumanbar) in GitHub (issue #14). NB. The
	direction of the test changed from previous versions.

	* raupcrick: adapted to the change in oecosimu() to define the